ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: mr-market
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-prefix
  namespace: mr-market
spec:
  addPrefix:
    prefix: /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-scheme
  namespace: mr-market
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: mr-market
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mr-market.dz`) && Path(`/front`)
      kind: Rule
#      middlewares:
#        - name: add-prefix
#        - name: redirect-scheme
      services:
        - name: mr-market-front-service
          port: 4200
    - match: Host(`mr-market.dz`)
      kind: Rule
      middlewares:
#        - name: add-prefix
#        - name: redirect-scheme
      services:
        - name: mr-market-proxy-service
          port: 8083
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: nginx-https
#  namespace: gosra-auto
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - match: Host(`gosra-auto.dz`)
#      kind: Rule
#      services:
#        - name: gosra-auto-ihm-service
#          port: 4200
#    - match: Host(`gosra-auto.dz`) && Path(`/ihm`)
#      kind: Rule
#      services:
#        - name: gosra-auto-ihm-service
#          port: 4200
#    - match: Host(`gosra-auto.dz`) && Path(`/server`)
#      kind: Rule
#      services:
#        - name: gosra-auto-server-service
#          port: 8888
#  tls:
#    certResolver: pebble
